tests/fail/ShiftLeftError.java
package fail;

public class ShiftLeftError {
    public static void main(String[] args) {
        System.out.println(19 << 'a');
    }
}